fix bug empty divs invisible replace with grid display

--- a/style.css
+++ b/style.css
@@ -1,15 +1,10 @@
 .grid {
-    display: flex;
-    flex-wrap: wrap;
-    border: solid 1px;
+    display: grid;
+    grid-template: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px / 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+    border: solid 1px black;
     width: 300px;
     height: 300px;
 };
-
-.grid div {
-    width: 20px;
-    height: 20px;
-}
 
 .shooter {
     background-color: blue;
